Tiny fix and more known issues: 1. Fixed - dark mode toggle was not setting global style 2. More known issues

--- a/public/dark.css
+++ b/public/dark.css
@@ -2,8 +2,6 @@ html[data-theme="dark"] {
   --label-bg: #444;
   --border-bg: #333;
   --page-bg: #000;
-  --diagram-bg: #555;
-  --diagram-sep: #333;
 }
 
 html[data-theme="dark"] .handle {
